syntax = "proto3";
import "mailbox.proto";
import "create_entity.proto";
package LPS.Server.Core.Rpc.InnerMessages;

message CreateEntityRes {
  LPS.Common.Core.Rpc.InnerMessages.MailBox Mailbox = 1;
  EntityType EntityType = 2;
  uint32 ConnectionID = 3;
  string EntityClassName = 4;
}
